--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
       content="Web site created using create-react-app"
     />
     <title>Emmanuel Reyes</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
