Add new font and edit css for  break, intro and skills components

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,16 @@
     <title>Emmanuel Reyes</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Share+Tech+Mono&display=swap"
       rel="stylesheet"
     />
   </head>
